src/app/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.markdown {
  @apply text-base leading-7;

  & > a,
  & > p > a {
    @apply text-[#007bff];

    &:hover {
      @apply text-[#0056b3];
    }
  }

  & > h2 {
    @apply my-4 text-2xl font-bold;
  }

  & > h3 {
    @apply my-4 text-xl font-bold;
  }

  & > h4 {
    @apply my-4 text-lg font-bold;
  }

  & > h5 {
    @apply my-4 text-base font-bold;
  }

  & > h6 {
    @apply my-4 text-sm font-bold;
  }

  & > ul {
    @apply list-disc py-2 pl-8;

    & > li {
      @apply pb-2;

      & > ol {
        @apply list-decimal py-2 pl-8;
      }
    }
  }

  & > ol {
    @apply list-decimal py-2 pl-8;

    & > li {
      @apply pb-2;

      & > ul {
        @apply list-disc py-2 pl-8;
      }
    }
  }

  & > code,
  & > p > code {
    @apply my-2 rounded bg-slate-950 px-2 py-1 text-white;
  }

  & > blockquote {
    @apply my-4 border-l-4 border-primary-foreground bg-primary-foreground bg-opacity-10 p-4;
  }

  & > pre {
    @apply my-4 whitespace-pre-wrap rounded-lg bg-charcoal p-4 text-white;
  }
}

